--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <ul>
                     <li><a href="https://apurvmaurya.github.io/Rock-Paper-Scissors/">Rock Paper Scissors</a></li>
                     <li><a href="https://apurvmaurya.github.io/Calculator/">Calculator</a></li>
+                    <li><a href="https://apurvmaurya.github.io/My-Resume/">My Resume</a></li>
                 </ul>
             </div>  
         </body>
