--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <li><a href="https://apurvmaurya.github.io/Rock-Paper-Scissors/">Rock Paper Scissors</a></li>
                     <li><a href="https://apurvmaurya.github.io/Calculator/">Calculator</a></li>
                     <li><a href="https://apurvmaurya.github.io/My-Resume/">My Resume</a></li>
+                    <li><a href="https://apurvmaurya.github.io/Quiz-Game/">Quiz Game</a></li>
                 </ul>
             </div>  
         </body>
