--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <li><a href="https://apurvmaurya.github.io/Calculator/">Calculator</a></li>
                     <li><a href="https://apurvmaurya.github.io/My-Resume/">My Resume</a></li>
                     <li><a href="https://apurvmaurya.github.io/Quiz-Game/">Quiz Game</a></li>
+                    <li><a href="https://apurvmaurya.github.io/Tic-Tac-Toe/">Tic Tac Toe</a></li>
                 </ul>
             </div>  
         </body>
